Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,35 +31,73 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>The Moon mod</h1>
+        <h1>The Amazing Moonmod </h1>
 
-<h1>GENERAL</h1>
+<p>There is alot that needs to be done, but here is the pre release</p>
 
-<p>The Moon mod gives you the ability to travel to the moon</p>
+<h1>TERMS AND CONDITIONS</h1>
 
-<h1>LINKS</h1>
+<p>The Modding Team</p>
 
-<p>Wiki: moonmod.wikia.com</p>
+<p>Jlndk - The Owner and coder</p>
 
-<p>Thread on minecraftforum: <a href="http://www.minecraftforum.net/topic/1604455-wipmoon-mod-now-updated-by-jlndk-146open-sourgeforge/">http://www.minecraftforum.net/topic/1604455-wipmoon-mod-now-updated-by-jlndk-146open-sourgeforge/</a></p>
+<p>How to get there
+To get to The Moon you have to build a portal. The portal looks same as Nether portal, but is made from cheese, because as you Moon is made from cheese, isn’t it? To activate the portal use Sonic Screwdiver. As you find out later the cheese myth isn’t really true, but every there is a little bit of truth in every tale.</p>
 
-<h1>TERMS OF AGREEMENT</h1>
+<p>Living on The Moon
+On Moon there are few changes against Minecraftia. As you know, Moon doesn’t have an atmosphere. So you have to wear super-duper Moon Suit or you will suffocate in no time. Also because of absence of atmosphere you cannot place certain blocks including plants, fluids and fire operating crafts (furnaces, torches). If you want to smelt ores or use torches. No problem. Just take a piece of Minecraftia with you. It’s really easy, just craft a Moon Tent for you. Tent unites a protection and portability. You want to move on? Just pack your tent and head to adventure.</p>
 
-<ol>
-<li><p>USED TERMS
-MOD - modification, plugin, a piece of software that interfaces with the Minecraft client to extend, add, change or remove original capabilities.
-MOJANG - Mojang AB
-OWNER - , Original author(s) of the MOD, also called the modding team, listed below. Under the copyright terms accepted when purchasing Minecraft (<a href="http://www.minecraft.net/copyright.jsp">http://www.minecraft.net/copyright.jsp</a>) the OWNER has full rights over their MOD despite use of MOJANG code.
-USER - End user of the mod, person installing the mod.</p></li>
-<li><p>LIABILITY
-THIS MOD IS PROVIDED 'AS IS' WITH NO WARRANTIES, IMPLIED OR OTHERWISE. THE OWNER OF THIS MOD TAKES NO RESPONSIBILITY FOR ANY DAMAGES INCURRED FROM THE USE OF THIS MOD. THIS MOD ALTERS FUNDAMENTAL PARTS OF THE MINECRAFT GAME, PARTS OF MINECRAFT MAY NOT WORK WITH THIS MOD INSTALLED. ALL DAMAGES CAUSED FROM THE USE OR MISUSE OF THIS MOD FALL ON THE USER.</p></li>
-<li><p>USE
-Use of this MOD to be installed, manually or automatically, is given to the USER without restriction.</p></li>
-<li><p>REDISTRIBUTION
-This MOD may only be distributed where uploaded, mirrored, or otherwise linked to by the OWNER solely. All mirrors of this mod must have advance written permission from the OWNER. ANY attempts to make money off of this MOD (selling, selling modified versions, adfly, sharecash, etc.) are STRICTLY FORBIDDEN, and the OWNER may claim damages or take other action to rectify the situation.</p></li>
-<li><p>DERIVATIVE WORKS/MODIFICATION
-This mod is provided freely and may be decompiled and modified for private use, either with a decompiler or a bytecode editor. Public distribution of modified versions of this MOD require advance written permission of the OWNER and may be subject to certain terms.</p></li>
-</ol>
+<p>The Moon has a lower gravity than Minecraftia. So you can jump higher and fall deeper at ease. But this could be a little contra productive. So if you want to jump a little use duck jump i.e.  jump while sneaking.</p>
+
+<p>Changelog:
+-Updated to 1.4.6
+-added Cheese slice (put a cheese block into crafting table to create 4 slices. each of them generates 4 hp)</p>
+
+<ul>
+<li>fixed textures
+FAQ</li>
+</ul><p>Q: How do I build the portal?
+A: First create a vertical frame 4 by 5 from cheese. Then right click to activate it with Sonic Screwdriver.</p>
+
+<p>Q: How do I build a tent? It says "Couldnt build a tent." What should I do?
+A: Well placing a tent is a bit tricky. First you have to make sure you have a flat area 8 by 8 block. Above these platform there have to be at least 4 block of free space (air). Then dig a hole in the middle of this platform and fill it with tent block. This flat platform will be repalced with tent floor.</p>
+
+<p>Q: When I step into portal, I get message about entering the Nehter or the screen freezes with message "Saving Chunks". What should I do?
+A: Currently there is some problems with traveling through portal. It seems that The Moon isn't currently compatible with Creative mode. just change gamemode and then should everything be allright.</p>
+
+<p>Known Bugs:
+If someone got a solution plz reply</p>
+
+<ul>
+<li>You cant travel to the moon in creative mode</li>
+<li>moon tent dont work</li>
+<li>u can breath without moonsuit equipped on the moon</li>
+<li>gravity is equal to the normal</li>
+<li>lakes and overworld stuff generates on the moon and reverse</li>
+</ul><p>TODO list:
+fix creative mode issue/bug
+Fix atmosphere and air
+Fix gravity
+Fix Moonsuit
+Fix Moontent
+Add a mob
+Maybe some of your ideas </p>
+
+<p>Download: </p>
+
+<p>[size=5]Installation Instructions:
+[size=4]1. Download the latest version of forge from: Here
+2. Download the latest version of Moon mod
+3. Open your minecraft.jar file and delete the META-INF folder
+4. Copy all files inside of the forge Folder into root directory of minecraft.jar
+5. Copy all files inside of the Moon mod Folder into root directory of minecraft.jar
+6. start minecraft as normal (DO NOT FORGE UPDATE)
+if its not working then forge update</p>
+
+<p>0.0.2 alpha for minecraft 1.4.6</p>
+
+<p>Old versions
+0.0.1 alpha for minecraft 1.4.5</p>
       </section>
     </div>
 
