Corrected download links to build instead of src

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <h2 id="project_tagline">moonmod for minecraft</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/jlndk/Moonmod/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/jlndk/Moonmod/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="http://adf.ly/GHvo9">Download this project as a .zip file</a>
+              
             </section>
         </header>
     </div>
