--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ Maybe some of your ideas </p>
 
 <p>Download: </p>
 
-<p>[size=5]Installation Instructions:
-[size=4]1. Download the latest version of forge from: Here
+<p>Installation Instructions:
+1. Download the latest version of forge from: Here
 2. Download the latest version of Moon mod
 3. Open your minecraft.jar file and delete the META-INF folder
 4. Copy all files inside of the forge Folder into root directory of minecraft.jar
