--- a/index.html
+++ b/index.html
@@ -81,9 +81,10 @@ Fix Moontent
 Add a mob
 Maybe some of your ideas </p>
 
-<p>Download: </p>
 
-<p>Installation Instructions:
+
+<h2>Installation Instructions:</h2>
+<p>
 1. Download the latest version of forge from: Here
 2. Download the latest version of Moon mod
 3. Open your minecraft.jar file and delete the META-INF folder
