--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <section id="downloads">
               <a class="zip_download_link" href="http://adf.ly/GHvo9">Download this project as a .zip file</a>
-              
+              <a class="tar_download_link" href="https://github.com/jlndk/Moonmod/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
