added text for crafting recipies

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <h2 id="project_tagline">moonmod for minecraft</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="http://adf.ly/GHvo9">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/jlndk/Moonmod/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="http://adf.ly/GHvo9">Download this Mod as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/jlndk/Moonmod/tarball/master">Download the sourge as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -49,6 +49,7 @@ On Moon there are few changes against Minecraftia. As you know, Moon doesn’t h
 
 <p>The Moon has a lower gravity than Minecraftia. So you can jump higher and fall deeper at ease. But this could be a little contra productive. So if you want to jump a little use duck jump i.e.  jump while sneaking.</p>
 
+
 <p>Changelog:
 -Updated to 1.4.6
 -added Cheese slice (put a cheese block into crafting table to create 4 slices. each of them generates 4 hp)</p>
@@ -67,13 +68,13 @@ A: Currently there is some problems with traveling through portal. It seems that
 
 
 <ul>
-<li>You cant travel to the moon in creative mode</li>
 <li>moon tent dont work</li>
 <li>u can breath without moonsuit equipped on the moon</li>
 <li>gravity is equal to the normal</li>
 <li>lakes and overworld stuff generates on the moon and reverse</li>
+
+  
 </ul><p>TODO list:
-fix creative mode issue/bug
 Fix atmosphere and air
 Fix gravity
 Fix Moonsuit
@@ -81,6 +82,43 @@ Fix Moontent
 Add a mob
 Maybe some of your ideas </p>
 
+<a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';" class="link">[Show]</a><span id="spoiler_id" style="display: none"><a onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';" class="link">[Hide]</a><br>New Blocks and Items
+Cheese
+You will have to use it for portal. Cheese is edible, break Cheese block into slices and enjoy the delightfull taste.
+
+
+
+Reinforced Cloth
+Top Minecraft scientist copied this technology directly from NASA, so it has to work, sure? It’s like the ordinary cloth but it’s reinforced with golden coating, which provides airtightness and blocks cosmic rays.
+
+
+Moon Tent
+Your very own piece of homeland in vast nothingness of Moon. To build one you will need a Tent Block, Sonic Screwdriver and flat solid area. First dig out one block and replace it with Tent Block, then right click while holding charged Sonic Screwdriver and voila you have your Moon Tent ready. Inside the tent same rules as on the surface apply. You don’t have to wear Moon Suit. You can place all blocks (except Bed) use torches and so on. If you want to move on, simply click the Tent Block again and Moon Tent will pack into small carry able package.
+
+
+Moon Lamp
+On Moon it’s kinda dark, but ordinary torches don’t work here. Problem? Not really, just use these Moon Lamps!
+
+
+Moon Suit
+This piece of clothing is the most important part of your wardrobe. It protects you on surface of the moon. It provides same protection as leather armour so take care of it, but it grants you ability to breath in vacuum on Moon surface.
+Moon Helmet
+
+Moon Jacket
+
+Moon Pants
+
+Moon Sneakers
+
+
+Sonic Screwdriver
+This is the most important tool for Moon explorer. It has 30 uses before it turns off. To make it operative again you have to recharge it. Note: You can only recharge a fully depleted screwdriver.
+
+
+
+Regolith
+Regolith aka Moon Soil is pretty common on Moon surface. You can use it to effectively craft TNT.
+</span>
 
 
 <h2>Installation Instructions:</h2>
