--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ Fix Moontent
 Add a mob
 Maybe some of your ideas </p>
 
+<h3>New blocks and items</h3>
 <a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';" class="link">[Show]</a><span id="spoiler_id" style="display: none"><a onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';" class="link">[Hide]</a><br>New Blocks and Items
 Cheese
 You will have to use it for portal. Cheese is edible, break Cheese block into slices and enjoy the delightfull taste.
