--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@ Add a mob
 Maybe some of your ideas </p>
 
 <h3>New blocks and items</h3>
-<a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';" class="link">[Show]</a><span id="spoiler_id" style="display: none"><a onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';" class="link">[Hide]</a><br>New Blocks and Items
+<a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';" class="link">[Show]</a><span id="spoiler_id" style="display: none"><a onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';" class="link">[Hide]</a><br>
 Cheese
 You will have to use it for portal. Cheese is edible, break Cheese block into slices and enjoy the delightfull taste.
 
 
 
-Reinforced Cloth
+<p>Reinforced Cloth
 Top Minecraft scientist copied this technology directly from NASA, so it has to work, sure? It’s like the ordinary cloth but it’s reinforced with golden coating, which provides airtightness and blocks cosmic rays.
 
 
@@ -114,11 +114,7 @@ Moon Sneakers
 
 Sonic Screwdriver
 This is the most important tool for Moon explorer. It has 30 uses before it turns off. To make it operative again you have to recharge it. Note: You can only recharge a fully depleted screwdriver.
-
-
-
-Regolith
-Regolith aka Moon Soil is pretty common on Moon surface. You can use it to effectively craft TNT.
+</p>
 </span>
 
 
