--- a/index.html
+++ b/index.html
@@ -89,30 +89,37 @@ You will have to use it for portal. Cheese is edible, break Cheese block into sl
 
 
 
-<p>Reinforced Cloth
+<h4>Reinforced Cloth</h4>
+<p>
 Top Minecraft scientist copied this technology directly from NASA, so it has to work, sure? It’s like the ordinary cloth but it’s reinforced with golden coating, which provides airtightness and blocks cosmic rays.
+</p>
 
-
-Moon Tent
+<h4>Moon Tent</h4>
+<p>
 Your very own piece of homeland in vast nothingness of Moon. To build one you will need a Tent Block, Sonic Screwdriver and flat solid area. First dig out one block and replace it with Tent Block, then right click while holding charged Sonic Screwdriver and voila you have your Moon Tent ready. Inside the tent same rules as on the surface apply. You don’t have to wear Moon Suit. You can place all blocks (except Bed) use torches and so on. If you want to move on, simply click the Tent Block again and Moon Tent will pack into small carry able package.
+</p>
 
-
-Moon Lamp
+<h4>Moon Lamp</h4>
+<p>
 On Moon it’s kinda dark, but ordinary torches don’t work here. Problem? Not really, just use these Moon Lamps!
+</p>
 
-
-Moon Suit
+<h4>Moon Suit</h4>
+<p>
 This piece of clothing is the most important part of your wardrobe. It protects you on surface of the moon. It provides same protection as leather armour so take care of it, but it grants you ability to breath in vacuum on Moon surface.
-Moon Helmet
+</p>
 
-Moon Jacket
+<h5>Moon Helmet</h5>
 
-Moon Pants
+<h5>Moon Jacket</h5>
 
-Moon Sneakers
+<h5>Moon Pants</h5>
+
+<h5>Moon Boots</h5>
 
 
-Sonic Screwdriver
+<h4>Sonic Screwdriver</h4>
+<p>
 This is the most important tool for Moon explorer. It has 30 uses before it turns off. To make it operative again you have to recharge it. Note: You can only recharge a fully depleted screwdriver.
 </p>
 </span>
