added pictures for crafting recipies

--- a/index.html
+++ b/index.html
@@ -86,23 +86,26 @@ Maybe some of your ideas </p>
 <a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';" class="link">[Show]</a><span id="spoiler_id" style="display: none"><a onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';" class="link">[Hide]</a><br>
 Cheese
 You will have to use it for portal. Cheese is edible, break Cheese block into slices and enjoy the delightfull taste.
-
-
+<img src="/images/wiki/cheeseblock1.png" alt="cheeseblock1">
+<img src="/images/wiki/cheeseblock2.png" alt="cheeseblock2">
 
 <h4>Reinforced Cloth</h4>
 <p>
 Top Minecraft scientist copied this technology directly from NASA, so it has to work, sure? It’s like the ordinary cloth but it’s reinforced with golden coating, which provides airtightness and blocks cosmic rays.
 </p>
+<img src="/images/wiki/reinfcloth.png" alt="reinfcloth">
 
 <h4>Moon Tent</h4>
 <p>
 Your very own piece of homeland in vast nothingness of Moon. To build one you will need a Tent Block, Sonic Screwdriver and flat solid area. First dig out one block and replace it with Tent Block, then right click while holding charged Sonic Screwdriver and voila you have your Moon Tent ready. Inside the tent same rules as on the surface apply. You don’t have to wear Moon Suit. You can place all blocks (except Bed) use torches and so on. If you want to move on, simply click the Tent Block again and Moon Tent will pack into small carry able package.
 </p>
+<img src="/images/wiki/moontent.png" alt="moontent">
 
 <h4>Moon Lamp</h4>
 <p>
 On Moon it’s kinda dark, but ordinary torches don’t work here. Problem? Not really, just use these Moon Lamps!
 </p>
+<img src="/images/wiki/moonlamp.png" alt="moonlamp">
 
 <h4>Moon Suit</h4>
 <p>
@@ -110,18 +113,22 @@ This piece of clothing is the most important part of your wardrobe. It protects 
 </p>
 
 <h5>Moon Helmet</h5>
+<img src="/images/wiki/moonhelmet.png" alt="moonhelmet">
 
 <h5>Moon Jacket</h5>
+<img src="/images/wiki/chest.png" alt="moonchest">
 
 <h5>Moon Pants</h5>
+<img src="/images/wiki/moonpants.png" alt="moonpants">
 
 <h5>Moon Boots</h5>
-
+<img src="/images/wiki/moonboots.png" alt="moonboots">
 
 <h4>Sonic Screwdriver</h4>
 <p>
 This is the most important tool for Moon explorer. It has 30 uses before it turns off. To make it operative again you have to recharge it. Note: You can only recharge a fully depleted screwdriver.
 </p>
+<img src="/images/wiki/sonicscrew.png" alt="sonic_screw">
 </span>
 
 
