--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ This piece of clothing is the most important part of your wardrobe. It protects 
 <img src="http://jonasln.dk/images/wiki/moonhelmet.png" alt="moonhelmet">
 
 <h5>Moon Jacket</h5>
-<img src="http://jonasln.dk/images/wiki/chest.png" alt="moonchest">
+<img src="http://jonasln.dk/images/wiki/moonchest.png" alt="moonchest">
 
 <h5>Moon Pants</h5>
 <img src="http://jonasln.dk/images/wiki/moonpants.png" alt="moonpants">
