--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@ On Moon there are few changes against Minecraftia. As you know, Moon doesn’t h
 <p>The Moon has a lower gravity than Minecraftia. So you can jump higher and fall deeper at ease. But this could be a little contra productive. So if you want to jump a little use duck jump i.e.  jump while sneaking.</p>
 
 
-<p>Changelog:
--Updated to 1.4.6
--added Cheese slice (put a cheese block into crafting table to create 4 slices. each of them generates 4 hp)</p>
+<p><a href="https://github.com/jlndk/Moonmod/commits/master">Changelog</a></p>
 
 <ul>
 <li>fixed textures
