updated todo list and known bugs
to the issue tracker

--- a/index.html
+++ b/index.html
@@ -71,14 +71,15 @@ A: Currently there is some problems with traveling through portal. It seems that
 <li>gravity is equal to the normal</li>
 <li>lakes and overworld stuff generates on the moon and reverse</li>
 
+<h2><a href="https://github.com/jlndk/Moonmod/issues?state=open">Known bugs</a></h2>
+  
+<p>
+If someone got a solution plz reply</p>
   
 </ul><p>TODO list:
-Fix atmosphere and air
-Fix gravity
-Fix Moonsuit
-Fix Moontent
+Fix <a href="https://github.com/jlndk/Moonmod/issues?state=open">Known bugs</a></p>
 Add a mob
-Maybe some of your ideas </p>
+Maybe some of your ideas</p>
 
 <h3>New blocks and items</h3>
 <a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';" class="link">[Show]</a><span id="spoiler_id" style="display: none"><a onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';" class="link">[Hide]</a><br>
