fixed layout a little bit

--- a/index.html
+++ b/index.html
@@ -65,21 +65,15 @@ A: Well placing a tent is a bit tricky. First you have to make sure you have a f
 A: Currently there is some problems with traveling through portal. It seems that The Moon isn't currently compatible with Creative mode. just change gamemode and then should everything be allright.</p>
 
 
-<ul>
-<li>moon tent dont work</li>
-<li>u can breath without moonsuit equipped on the moon</li>
-<li>gravity is equal to the normal</li>
-<li>lakes and overworld stuff generates on the moon and reverse</li>
-
-<h2><a href="https://github.com/jlndk/Moonmod/issues?state=open">Known bugs</a></h2>
+<h3><a href="https://github.com/jlndk/Moonmod/issues?state=open">Known bugs</a></h3>
   
 <p>
 If someone got a solution plz reply</p>
   
 </ul><p>TODO list:
-Fix <a href="https://github.com/jlndk/Moonmod/issues?state=open">Known bugs</a></p>
-Add a mob
-Maybe some of your ideas</p>
+<li>Fix <a href="https://github.com/jlndk/Moonmod/issues?state=open">Known bugs</a></li>
+<li>Add a mob</li>
+<li>Maybe some of your ideas</li></p>
 
 <h3>New blocks and items</h3>
 <a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';" class="link">[Show]</a><span id="spoiler_id" style="display: none"><a onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';" class="link">[Hide]</a><br>
