changed a little bit on the FAQ's

--- a/index.html
+++ b/index.html
@@ -52,15 +52,13 @@ On Moon there are few changes against Minecraftia. As you know, Moon doesn’t h
 
 <p><a href="https://github.com/jlndk/Moonmod/commits/master">Changelog</a></p>
 
-FAQ</li>
-</ul><p>Q: How do I build the portal?
-A: First create a vertical frame 4 by 5 from cheese. Then right click to activate it with Sonic Screwdriver.</p>
+<h2>FAQ</h2></li>
+</ul><p>Q: How do I build the portal?</p>
+<p>A: First create a vertical frame 4 by 5 from cheese. Then right click to activate it with Sonic Screwdriver.</p>
 
 <p>Q: How do I build a tent? It says "Couldnt build a tent." What should I do?
-A: Well placing a tent is a bit tricky. First you have to make sure you have a flat area 8 by 8 block. Above these platform there have to be at least 4 block of free space (air). Then dig a hole in the middle of this platform and fill it with tent block. This flat platform will be repalced with tent floor.</p>
+A: Well placing a tent is a bit tricky. It dont works right now but normally, you have to make sure you have a flat area 8 by 8 block. Above these platform there have to be at least 4 block of free space (air). Then dig a hole in the middle of this platform and fill it with tent block. This flat platform will be repalced with tent floor.
 
-<p>Q: When I step into portal, I get message about entering the Nehter or the screen freezes with message "Saving Chunks". What should I do?
-A: Currently there is some problems with traveling through portal. It seems that The Moon isn't currently compatible with Creative mode. just change gamemode and then should everything be allright.</p>
 
 
 <h3><a href="https://github.com/jlndk/Moonmod/issues?state=open">Known bugs</a></h3>
