fixed som titles

--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@ A: Well placing a tent is a bit tricky. It dont works right now but normally, yo
 
 
 
-<h3><a href="https://github.com/jlndk/Moonmod/issues?state=open">Known bugs</a></h3>
+<h2><a href="https://github.com/jlndk/Moonmod/issues?state=open">Known bugs</a></h2>
   
 <p>
 If someone got a solution plz reply</p>
   
-</ul><p>TODO list:
-<li>Fix <a href="https://github.com/jlndk/Moonmod/issues?state=open">Known bugs</a></li>
+</ul><h2>TODO list:</h2>
+<p><li>Fix <a href="https://github.com/jlndk/Moonmod/issues?state=open">Known bugs</a></li>
 <li>Add a mob</li>
 <li>Maybe some of your ideas</li></p>
 
