Moved the title The amazing moonmod
from the start of the page to the header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/jlndk/Moonmod">View on GitHub</a>
 
-          <h1 id="project_title">Moonmod</h1>
+          <h1 id="project_title">The Amazing Moonmod</h1>
           <h2 id="project_tagline">moonmod for minecraft</h2>
 
             <section id="downloads">
@@ -31,7 +31,6 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>The Amazing Moonmod </h1>
 
 <p>There is alot that needs to be done, but here is the pre release</p>
 
