Added my real name to the copyright

--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@ if its not working then forge update</p>
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Moonmod maintained by <a href="https://github.com/jlndk">jlndk</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">Moonmod maintained by <a href="https://github.com/jlndk">jlndk aka Jonas Lindenskov Nielsen</a></p>
       </footer>
     </div>
 
