Fixed spoiler (i think)

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@ This is the most important tool for Moon explorer. It has 30 uses before it turn
 
 <h2> how to join the project</h2>
 <a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; 
+document.getElementById('show_id').style.display='none';" class="link">[Show]</a><span id="spoiler_id" style="display: none"><a onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';" class="link">[Hide]</a><br>
 Register on Github
 To do anything useful I first needed to sign up for an account. Github has a range of accounts but I found that with one of their free accounts I would be able to get started and contribute to the project. This gives me a project space of my own and a user to tie all my activities to.
 
