--- a/index.html
+++ b/index.html
@@ -121,7 +121,13 @@ This is the most important tool for Moon explorer. It has 30 uses before it turn
 
 <h2> how to join the project</h2>
 <div id="spoiler" style="display:none"> 
-HIDDEN CONTENT HERE 
+<p>
+If you are on a windows follow a, if you are on a mac, follow b, and if you are on linux or another system follow c. 
+1. Register at Github
+2. Go to the moonmod's repo page, and click the fork button  Now you have a copy of the project on your Github but to be able               to work on it you need to clone it to your computer. 
+3. Choose your git program
+ A. You have 2 options. You can download the github program, with a interface(recomended) or download the gitprogram command line only (not recomended for starters), if you choose nr 2 follow c from now. If not, go to windows.github.com 
+And download the program
 </div> 
 <button title="Click to show/hide content" type="button" onclick="if(document.getElementById('spoiler') .style.display=='none') {document.getElementById('spoiler') .style.display=''}else{document.getElementById('spoiler') .style.display='none'}">Show/hide</button>
 <h2>Installation Instructions:</h2>
