--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ On Moon there are few changes against Minecraftia. As you know, Moon doesn’t h
 <p>Q: How do I build a tent? It says "Couldnt build a tent." What should I do?
 A: Well placing a tent is a bit tricky. It dont works right now but normally, you have to make sure you have a flat area 8 by 8 block. Above these platform there have to be at least 4 block of free space (air). Then dig a hole in the middle of this platform and fill it with tent block. This flat platform will be repalced with tent floor.
 
+<p>Q:HEEEELP. My Minecraft will not start</p>
+
 
 
 <h2><a href="https://github.com/jlndk/Moonmod/issues?state=open">Known bugs</a></h2>
