--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>The Amazing Moonmod</title>
+    <title>Moonmod</title>
   </head>
 
   <body>
@@ -18,12 +18,12 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/jlndk/Moonmod">View on GitHub</a>
 
-          <h1 id="project_title">The Amazing Moonmod</h1>
+          <h1 id="project_title">Moonmod</h1>
           <h2 id="project_tagline">moonmod for minecraft</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="http://adf.ly/GmV5w">Download this Mod as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/jlndk/Moonmod/tarball/master">Download the sourge as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/jlndk/Moonmod/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/jlndk/Moonmod/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -31,6 +31,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+        <h1>The Amazing Moonmod </h1>
 
 <p>There is alot that needs to be done, but here is the pre release</p>
 
@@ -40,114 +41,71 @@
 
 <p>Jlndk - The Owner and coder</p>
 
-<h2>How to get there</h2>
-<p>To get to The Moon you have to build a portal. The portal looks same as Nether portal, but is made from cheese, because as you Moon is made from cheese, isn’t it? To activate the portal use Sonic Screwdiver. As you find out later the cheese myth isn’t really true, but every there is a little bit of truth in every tale.</p>
+<p>How to get there
+To get to The Moon you have to build a portal. The portal looks same as Nether portal, but is made from cheese, because as you Moon is made from cheese, isn’t it? To activate the portal use Sonic Screwdiver. As you find out later the cheese myth isn’t really true, but every there is a little bit of truth in every tale.</p>
 
 <p>Living on The Moon
 On Moon there are few changes against Minecraftia. As you know, Moon doesn’t have an atmosphere. So you have to wear super-duper Moon Suit or you will suffocate in no time. Also because of absence of atmosphere you cannot place certain blocks including plants, fluids and fire operating crafts (furnaces, torches). If you want to smelt ores or use torches. No problem. Just take a piece of Minecraftia with you. It’s really easy, just craft a Moon Tent for you. Tent unites a protection and portability. You want to move on? Just pack your tent and head to adventure.</p>
 
 <p>The Moon has a lower gravity than Minecraftia. So you can jump higher and fall deeper at ease. But this could be a little contra productive. So if you want to jump a little use duck jump i.e.  jump while sneaking.</p>
 
+<p>Changelog:
+-Updated to 1.4.6
+-added Cheese slice (put a cheese block into crafting table to create 4 slices. each of them generates 4 hp)</p>
 
-<p><a href="https://github.com/jlndk/Moonmod/commits/master">Changelog</a></p>
-
-<h2>FAQ</h2></li>
-</ul><p>Q: How do I build the portal?</p>
-<p>A: First create a vertical frame 4 by 5 from cheese. Then right click to activate it with Sonic Screwdriver.</p>
+<ul>
+<li>fixed textures
+FAQ</li>
+</ul><p>Q: How do I build the portal?
+A: First create a vertical frame 4 by 5 from cheese. Then right click to activate it with Sonic Screwdriver.</p>
 
 <p>Q: How do I build a tent? It says "Couldnt build a tent." What should I do?
-A: Well placing a tent is a bit tricky. It dont works right now but normally, you have to make sure you have a flat area 8 by 8 block. Above these platform there have to be at least 4 block of free space (air). Then dig a hole in the middle of this platform and fill it with tent block. This flat platform will be repalced with tent floor.
+A: Well placing a tent is a bit tricky. First you have to make sure you have a flat area 8 by 8 block. Above these platform there have to be at least 4 block of free space (air). Then dig a hole in the middle of this platform and fill it with tent block. This flat platform will be repalced with tent floor.</p>
 
-<p>Q:HEEEELP. My Minecraft will not start</p>
+<p>Q: When I step into portal, I get message about entering the Nehter or the screen freezes with message "Saving Chunks". What should I do?
+A: Currently there is some problems with traveling through portal. It seems that The Moon isn't currently compatible with Creative mode. just change gamemode and then should everything be allright.</p>
 
-
-
-<h2><a href="https://github.com/jlndk/Moonmod/issues?state=open">Known bugs</a></h2>
-  
-<p>
+<p>Known Bugs:
 If someone got a solution plz reply</p>
-  
-</ul><h2>TODO list:</h2>
-<p><li>Fix <a href="https://github.com/jlndk/Moonmod/issues?state=open">Known bugs</a></li>
-<li>Add a mob</li>
-<li>Maybe some of your ideas</li></p>
 
-<h2>New blocks and items</h2>
-<a id="show_id" onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';" class="link">[Show]</a><span id="spoiler_id" style="display: none"><a onclick="document.getElementById('spoiler_id').style.display='none'; document.getElementById('show_id').style.display='';" class="link">[Hide]</a><br>
-Cheese
-You will have to use it for portal. Cheese is edible, break Cheese block into slices and enjoy the delightfull taste.
-<img src="http://jonasln.dk/images/wiki/cheeseblock1.png" alt="cheeseblock1">
-<img src="http://jonasln.dk/images/wiki/cheeseblock2.png" alt="cheeseblock2">
+<ul>
+<li>You cant travel to the moon in creative mode</li>
+<li>moon tent dont work</li>
+<li>u can breath without moonsuit equipped on the moon</li>
+<li>gravity is equal to the normal</li>
+<li>lakes and overworld stuff generates on the moon and reverse</li>
+</ul><p>TODO list:
+fix creative mode issue/bug
+Fix atmosphere and air
+Fix gravity
+Fix Moonsuit
+Fix Moontent
+Add a mob
+Maybe some of your ideas </p>
 
-<h4>Reinforced Cloth</h4>
-<p>
-Top Minecraft scientist copied this technology directly from NASA, so it has to work, sure? It’s like the ordinary cloth but it’s reinforced with golden coating, which provides airtightness and blocks cosmic rays.
-</p>
-<img src="http://jonasln.dk/images/wiki/reinfcloth.png" alt="reinfcloth">
+<p>Download: </p>
 
-<h4>Moon Tent</h4>
-<p>
-Your very own piece of homeland in vast nothingness of Moon. To build one you will need a Tent Block, Sonic Screwdriver and flat solid area. First dig out one block and replace it with Tent Block, then right click while holding charged Sonic Screwdriver and voila you have your Moon Tent ready. Inside the tent same rules as on the surface apply. You don’t have to wear Moon Suit. You can place all blocks (except Bed) use torches and so on. If you want to move on, simply click the Tent Block again and Moon Tent will pack into small carry able package.
-</p>
-<img src="http://jonasln.dk/images/wiki/moontent.png" alt="moontent">
-
-<h4>Moon Lamp</h4>
-<p>
-On Moon it’s kinda dark, but ordinary torches don’t work here. Problem? Not really, just use these Moon Lamps!
-</p>
-<img src="http://jonasln.dk/images/wiki/moonlamp.png" alt="moonlamp">
-
-<h4>Moon Suit</h4>
-<p>
-This piece of clothing is the most important part of your wardrobe. It protects you on surface of the moon. It provides same protection as leather armour so take care of it, but it grants you ability to breath in vacuum on Moon surface.
-</p>
-
-<h5>Moon Helmet</h5>
-<img src="http://jonasln.dk/images/wiki/moonhelmet.png" alt="moonhelmet">
-
-<h5>Moon Jacket</h5>
-<img src="http://jonasln.dk/images/wiki/moonchest.png" alt="moonchest">
-
-<h5>Moon Pants</h5>
-<img src="http://jonasln.dk/images/wiki/moonpants.png" alt="moonpants">
-
-<h5>Moon Boots</h5>
-<img src="http://jonasln.dk/images/wiki/moonboots.png" alt="moonboots">
-
-<h4>Sonic Screwdriver</h4>
-<p>
-This is the most important tool for Moon explorer. It has 30 uses before it turns off. To make it operative again you have to recharge it. Note: You can only recharge a fully depleted screwdriver.
-</p>
-<img src="http://jonasln.dk/images/wiki/sonicscrew.png" alt="sonic_screw">
-</span>
-
-<h2> how to join the project</h2>
-<div id="spoiler" style="display:none"> 
-<p>
-If you are on a windows follow a, if you are on a mac, follow b, and if you are on linux or another system follow c. 
-1. Register at Github
-2. Go to the moonmod's repo page, and click the fork button  Now you have a copy of the project on your Github but to be able               to work on it you need to clone it to your computer. 
-3. Choose your git program
- A. You have 2 options. You can download the github program, with a interface(recomended) or download the gitprogram command line only (not recomended for starters), if you choose nr 2 follow c from now. If not, go to windows.github.com 
-And download the program
-</div> 
-<button title="Click to show/hide content" type="button" onclick="if(document.getElementById('spoiler') .style.display=='none') {document.getElementById('spoiler') .style.display=''}else{document.getElementById('spoiler') .style.display='none'}">Show/hide</button>
-<h2>Installation Instructions:</h2>
-<p>
-1. Download the latest version of forge from: Here
+<p>[size=5]Installation Instructions:
+[size=4]1. Download the latest version of forge from: Here
 2. Download the latest version of Moon mod
 3. Open your minecraft.jar file and delete the META-INF folder
 4. Copy all files inside of the forge Folder into root directory of minecraft.jar
 5. Copy all files inside of the Moon mod Folder into root directory of minecraft.jar
 6. start minecraft as normal (DO NOT FORGE UPDATE)
 if its not working then forge update</p>
+
+<p>0.0.2 alpha for minecraft 1.4.6</p>
+
+<p>Old versions
+0.0.1 alpha for minecraft 1.4.5</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Moonmod maintained by <a href="https://github.com/jlndk">jlndk aka Jonas Lindenskov Nielsen</a></p>
+        <p class="copyright">Moonmod maintained by <a href="https://github.com/jlndk">jlndk</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
