--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h2 id="project_tagline">moonmod for minecraft</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="http://adf.ly/GmV5w">Download this Mod as a .zip file</a>
+              <a class="zip_download_link" href="http://adf.ly/Hd7Cl">Download this Mod as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/jlndk/Moonmod/tarball/master">Download the sourge as a tar.gz file</a>
             </section>
         </header>
