added older versions download link

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <h2 id="project_tagline">moonmod for minecraft</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="http://adf.ly/Hd7Cl">Download this Mod as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/jlndk/Moonmod/tarball/master">Download the sourge as a tar.gz file</a>
+              <a class="zip_download_link" href="http://adf.ly/Hd7Cl">Download the newest version of the mod</a>
+              <a class="tar_download_link" href="http://adf.ly/HdA08">Download the older versions</a>
             </section>
         </header>
     </div>
