--- a/index.html
+++ b/index.html
@@ -133,15 +133,15 @@ And download the program
 </div> 
 <button title="Click to show/hide content" type="button" onclick="if(document.getElementById('spoiler') .style.display=='none') {document.getElementById('spoiler') .style.display=''}else{document.getElementById('spoiler') .style.display='none'}">Show/hide</button>
 <h2>Installation Instructions:</h2>
-<p>
-1. Download the latest version of forge from: Here
-2. Download the latest version of Moon mod
-3. Open your minecraft.jar file and delete the META-INF folder
-4. Copy all files inside of the forge Folder into root directory of minecraft.jar
-5. Copy all files inside of the Moon mod Folder into root directory of minecraft.jar
-6. start minecraft as normal (DO NOT FORGE UPDATE)
-if its not working then forge update</p>
-      </section>
+
+<p>1. Download the latest version of forge from: Here</p>
+<p>2. Download the latest version of Moon mod/<p>
+<p>3. Open your minecraft.jar file and delete the META-INF folder</p>
+<p>4. Copy all files inside of the forge Folder into root directory of minecraft.jar</p>
+<p>5. Copy all files inside of the Moon mod Folder into root directory of minecraft.jar</p>
+<p>6. start minecraft as normal (DO NOT FORGE UPDATE)</p>
+<p>if its not working then forge update</p>
+</section>
     </div>
 
     <!-- FOOTER  -->
