fixed layout a little bit

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ This is the most important tool for Moon explorer. It has 30 uses before it turn
 <div id="spoiler" style="display:none"> 
 <p>If you are on a windows follow a, if you are on a mac, follow b, and if you are on linux or another system follow c.</p> 
 <p>1. Register at Github</p>
-<p>2. Go to the moonmod's repo page, and click the fork button  Now you have a copy of the project on your Github but to be able
+<p>2. Go to the moonmod's repo page, and click the fork button. Now you have a copy of the project on your Github but to be able
 to work on it you need to clone it to your computer.</p>
 <p>3. Choose your git program</p>
 <p>A. You have 2 options. You can download the github program, with a interface(recomended) or download the git program command line only (not recomended for starters), if you choose nr 2 follow c from now. If not, go to windows.github.com 
