added mac version to join the project guide

--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@ to work on it you need to clone it to your computer.</p>
 <p>3. Choose your git program</p>
 <p>A. You have 2 options. You can download the github program, with a interface(recomended) or download the git program command line only (not recomended for starters), if you choose nr 2 follow c from now. If not, go to windows.github.com 
 And download the program<p>
+<p>B. You have 2 options. You can download the github program, with a interface(recomended) or download the git program command line only (not recomended for starters), if you choose nr 2 follow c from now. If not, go to mac.github.com 
+And download the program<p>
 <p>continues...</p>
 </div> 
 <button title="Click to show/hide content" type="button" onclick="if(document.getElementById('spoiler') .style.display=='none') {document.getElementById('spoiler') .style.display=''}else{document.getElementById('spoiler') .style.display='none'}">Show/hide</button>
