--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ If someone got a solution plz reply</p>
 <li>Maybe some of your ideas</li></p>
 
 <h2>New blocks and items</h2>
-<button title="Click to show/hide content" type="button" onclick="if(document.getElementById('spoiler') .style.display=='none') {document.getElementById('spoiler') .style.display=''}else{document.getElementById('spoiler') .style.display='none'}">Show/hide</button>
+<button title="Click to show/hide content" type="button"  onclick="document.getElementById('spoiler_id').style.display=''; document.getElementById('show_id').style.display='none';" class="link">[Show]</a><span id="spoiler_id" style="display: none"><a onclick="document.getElementById('spoiler_id').style.display='none'>Show/hide</button>
 Cheese
 You will have to use it for portal. Cheese is edible, break Cheese block into slices and enjoy the delightfull taste.
 <img src="http://jonasln.dk/images/wiki/cheeseblock1.png" alt="cheeseblock1">
